// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`evaluate trace detection shows the correct sequence 1`] = `
"recursive variable key1 detected
trace: key1 => key3 => key1"
`;

exports[`evaluate trace detection throws the correct error 1`] = `
"recursive variable key1 detected
trace: key1 => key1"
`;
